--- a/style.scss
+++ b/style.scss
@@ -1,8 +1,8 @@
-@import "./var";
-@import"./reset";
-@import"./header";
-@import"./main";
-@import"./section";
-@import"./pre-footer";
-@import "./footer";
-@import "./legal"
+@import "./bloks/var";
+@import"./bloks/reset";
+@import"./bloks/header";
+@import"./bloks/main";
+@import"./bloks/section";
+@import"./bloks/pre-footer";
+@import "./bloks/footer";
+@import "./bloks/legal";
